更新营销活动应用模块

--- a/content/apps/market/statics/front/css/touch.css
+++ b/content/apps/market/statics/front/css/touch.css
@@ -174,6 +174,8 @@ textarea{
  */
 .ecjia-margin-t {
 	margin-top: 1em;
+	border-radius: .8rem;
+	margin: .5rem;
 }
 .ecjia-margin-b {
 	margin-bottom: 1em;
